<resources>
    <string name="app_name">News App</string>

    <string name="recent_tab">Recent News</string>
    <string name="category_tab">Category</string>
    <string name="adUnitId">ca-app-pub-3940256099942544/6300978111</string>

    <!-- OPTIONS MENU -->
    <string name="action_refresh">Refresh</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Go Home</string>

    <!-- CONTENT DESCRIPTIONS -->
    <string name="news_image_desc">News Article Image</string>
    <string name="share_icon_desc">Share This Article</string>
    <string name="save_icon_desc">Save This Article</string>
    <string name="headline_thumb_desc">Headline Thumbnail</string>
    <string name="category_icon_desc">Choose News Category</string>
    <string name="widget_previous_desc">Show Previous Headline</string>
    <string name="widget_next_desc">Show Next Headline</string>
    <string name="bookmark_icon_desc">Add to Bookmarks</string>


    <!-- DUMMY TEXT -->
    <string name="title">Seattle Schoolchildren Told Get Vaccinated or Don\'t Return to Class in 2020 - Newsweek</string>
    <string name="article_date">2019-12-29</string>
    <string name="source_name">Newsweek</string>
    <string name="description">Seattle families were notified of changes to school policy. To attend school, students must be fully vaccinated, in the process of doing so, or have a signed Certificate of Exemption.</string>
    <string name="content">As the America grapples with the highest number of measles cases reported since 1992, Seattle schoolchildren are being told to get vaccinatedor don\'t bother returning to class in 2020.</string>
    <string name="widget_page_number">1/3</string>
    <!-- END OF DUMMY TEXT -->

    <string name="read_full_story_button">Read Full Story</string>

    <string-array name="category_array">
        <item>Business</item>
        <item>Entertainment</item>
        <item>General</item>
        <item>Health</item>
        <item>Science</item>
        <item>Sports</item>
        <item>Technology</item>
    </string-array>

    <integer-array name="category_ic_resourceId">
        <item>@drawable/ic_business</item>
        <item>@drawable/ic_entertainment</item>
        <item>@drawable/ic_general</item>
        <item>@drawable/ic_health</item>
        <item>@drawable/ic_science</item>
        <item>@drawable/ic_sports</item>
        <item>@drawable/ic_technology</item>
    </integer-array>

    <!-- ERROR MESSAGES -->
    <string name="loading_headlines_err">Loading data failed, check network settings and try again</string>
    <string name="no_connection_err">No internet access, check network settings and try again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
