<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/widget_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/app_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/page_num_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        tools:text="@string/widget_page_number" />


    <TextView
        android:id="@+id/widget_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name_tv"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        tools:text="@string/title"/>

    <ImageView
        android:id="@+id/widget_previous_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_arrow_back_24px"
        android:contentDescription="@string/widget_previous_desc" />

    <ImageView
        android:id="@+id/widget_next_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_arrow_forward_24px"
        android:contentDescription="@string/widget_next_desc" />

</RelativeLayout>